--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded&display=swap");
+    </style>
     <title>EasyNap</title>
   </head>
   <body>
