--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded&display=swap");
     </style>
     <title>EasyNap</title>
-    <link rel="icon" type="image/x-icon" href="/src/images/favicon.ico" />
+    <link rel="icon" type="image/vnd.icon" href="/src/images/favicon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
